# slack_emoji

./: .gitignore  .gitmodules  README  download.py  lint.bash  pyproject.toml  setup.cfg
slack_emoji/: download_emoji.py  emoji_dict.py
