[tool.poetry]
name = "slack_emoji"
version = "0.1.0"
description = ""
authors = ["curekoshimizu <shugo@manabe.mail-box.ne.jp>"]

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^4.3.20"
mypy = "^0.761"
pytest = "^6.2.1"
ipdb = "^0.13.4"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
known_first_party = ["dotfiles"]
line_length = 120
multi_line_output = 3
use_parentheses = true
